dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__ack_completion__stale_resubmit_then_next_completion_settles.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG event=on_ack_eliciting prev=Idle next=Scheduled location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_completion.rs:39:21
0:00:00.000000000 DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/recv.rs:333:41
0:00:00.000000000 DEBUG event=on_ack_eliciting prev=Flushed next=FlushedStale location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_completion.rs:198:25
0:00:00.000000000 DEBUG event=on_flush_complete prev=FlushedStale next=Scheduled location=dc/s2n-quic-dc/src/endpoint/recv.rs:360:41
0:00:00.000000000 DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/recv.rs:333:41
0:00:00.000000000 DEBUG event=on_flush_complete prev=Flushed next=Idle location=dc/s2n-quic-dc/src/endpoint/recv.rs:360:41
